--- a/config.toml
+++ b/config.toml
@@ -95,7 +95,30 @@ googleAnalytics = ""
     identifier = "fa fa-github"
     weight = 60
 
+# Platform download list
+[[menu.platforms]]
+    name = "Windows"
+    url = "https://wiki.vcmi.eu/index.php?title=Installation_on_Windows"
+    identifier = "fa fa-4x fa-windows"
+    weight = 10
 
+[[menu.platforms]]
+    name = "macOS"
+    url = "https://wiki.vcmi.eu/index.php?title=Installation_on_macOS"
+    identifier = "fa fa-4x fa-apple"
+    weight = 20
+
+[[menu.platforms]]
+    name = "Linux"
+    url = "https://wiki.vcmi.eu/index.php?title=Installation_on_Linux"
+    identifier = "fa fa-4x fa-linux"
+    weight = 30
+
+[[menu.platforms]]
+    name = "Android"
+    url = "https://wiki.vcmi.eu/index.php?title=Installation_on_Android"
+    identifier = "fa fa-4x fa-android"
+    weight = 40
 
 # Insert your username and the icon will apear on the page as long as
 # socialAppearAtTop or socialAppearAtBottom is set to true in the params area
