--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://new-website-preview.vcmi.eu/"
+baseurl = "http://vcmi.eu/"
 languageCode = "en-us"
 title = "VCMI Project"
 theme = "chronicles"
