--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,12 @@ plugins:
   - privacy
   - search
   - glightbox
+  - rss:
+      match_path: blog/posts/.* 
+      date_from_meta:
+        as_creation: date
+      categories:
+        - categories
 theme:
   name: material
   icon:
