--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 mkdocs==1.6.0
 mkdocs-include-dir-to-nav==1.2.0
 mkdocs-material==9.5.21
-mkdocs-glightbox==0.4.0
+mkdocs-glightbox==0.3.7 # newer versions causes problem (lightbox works only for cached images)
 mkdocs-rss-plugin==1.12.2
 mdutils==1.6.0
 json5==0.9.25
