--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
   - About: about.md
   - Players: players
   - Modders: modders
+  - Translators: translators
   - Developers: developers
 extra:
   social:
