--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,4 +86,12 @@ markdown_extensions:
       options:
         custom_icons:
           - overrides/.icons
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      linenums: true
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 repo_url: https://github.com/vcmi/vcmi
