--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-mkdocs==1.6.0
+mkdocs==1.6.1
 mkdocs-include-dir-to-nav==1.2.0
-mkdocs-material==9.5.21
-mkdocs-glightbox==0.3.7 # newer versions causes problem (lightbox works only for cached images)
-mkdocs-rss-plugin==1.12.2
-mdutils==1.6.0
-json_repair==0.20.1
-json5==0.9.25
-pillow==11.1.0
-numpy==1.26.4
-homm3data==0.1.5
+mkdocs-material==9.7.0
+mkdocs-glightbox==0.5.2
+mkdocs-rss-plugin==1.17.7
+mdutils==1.8.1
+json_repair==0.54.2
+json5==0.12.1
+pillow==12.0.0
+numpy==2.3.5
+homm3data==0.1.10
