--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ mkdocs-include-dir-to-nav==1.2.0
 mkdocs-material==9.7.0
 mkdocs-glightbox==0.5.2
 mkdocs-rss-plugin==1.17.7
+mkdocs-macros-plugin==1.5.0
 mdutils==1.8.1
 json_repair==0.54.2
 json5==0.12.1
