--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 mkdocs==1.6.1
 mkdocs-include-dir-to-nav==1.2.0
 mkdocs-material==9.7.0
-mkdocs-glightbox==0.5.2
+mkdocs-glightbox==0.3.7 # newer versions causes problem (lightbox works only for cached images)
 mkdocs-rss-plugin==1.17.7
 mdutils==1.8.1
 json_repair==0.54.2
